--- a/pom.xml
+++ b/pom.xml
@@ -62,7 +62,7 @@
                 <configuration>
                     <argLine>
                         -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
-                        -Dcucumber.options="--plugin io.qameta.allure.cucumber4jvm.AllureCucumber4Jvm --tags ~@ignore --tags ${suite.name} --tags ${sdk.to.test} --glue appium_testing.steps.${device.platform.name} --glue appium_testing.steps.commons src/test/resources/appium_testing/features/${device.platform.name}"
+                        -Dcucumber.options="--plugin io.qameta.allure.cucumber4jvm.AllureCucumber4Jvm --tags ~@ignore --tags ${suite.name} --tags ${sdk.to.test} --glue appium_testing.steps.${device.platform.name} --glue appium_testing.steps.commons src/test/resources/appium_testing/features"
                     </argLine>
                     <includes>
                         <include>**/CukesRunner.java</include>
